Revert "CSS changes to forms for adding, removing, and updating. More error and success message adjustments. Fixing what breaks when selectors weren't advanced enough, attempting to generalize selectors to apply to as much as possible. Started on mobile sizing me"
This reverts commit f6fdef8dc2f182236af9f9fefe3c9b0c4297a7f5.

--- a/web/static/admin/css/changelists.css
+++ b/web/static/admin/css/changelists.css
@@ -196,8 +196,7 @@ form#changelist-search > label {
     list-style-type: none;
     margin-left: 0;
     padding-left: 20px;
-    font-size: 2rem;
-    line-height: 3rem;
+    font-size: 2.5rem;
 }
 
 #changelist-filter a {
@@ -261,8 +260,8 @@ form#changelist-search > label {
 
 .paginator a:link, .paginator a:visited {
     padding: 2px 6px;
-    border: 1px solid rgba(255, 255, 255, .8);
-    /*background: white;*/
+    border: solid 1px #ccc;
+    background: white;
     text-decoration: none;
 }
 
@@ -284,7 +283,7 @@ form#changelist-search > label {
 .paginator .this-page {
     padding: 2px 6px;
     font-weight: bold;
-    font-size: 1em;
+    font-size: 13px;
     vertical-align: top;
 }
 
@@ -328,7 +327,7 @@ form#changelist-search > label {
 #changelist .actions span.clear,
 #changelist .actions span.question {
     /* font-size: 11px; */
-    margin: 0 1em;
+    margin: 0 0.5em;
     display: none;
 }
 
