--- a/web/static/admin/css/forms.css
+++ b/web/static/admin/css/forms.css
@@ -15,13 +15,7 @@
 
 form .form-row p {
     padding-left: 0;
-    font-size: 1.25em;
-}
-
-.form-row.field-upd_status.field-upd_timeout.field-upd_retries p,
-.form-row.field-loc_vehicle.field-loc_time p {
-    margin-left: 21em;
-    margin-top: -2.25em;
+    font-size: 13px;
 }
 
 .hidden {
@@ -45,11 +39,8 @@ label {
 .required label, label.required {
     font-weight: bold !important;
     /* color: #333 !important; */
-    text-align: left;
 }
-.required::before {
-    content:  "\2736";
-}
+
 /* RADIO BUTTONS */
 
 form ul.radiolist li {
@@ -77,9 +68,8 @@ form ul.inline li {
     display: inline-block;
     /*padding: 10px 0 3px 0;*/
     float: none;
-    width: 15em; 
+    /* width: 8em; */
     word-wrap: break-word;
-    text-align: right;
 }
 
 .aligned ul label {
@@ -88,18 +78,14 @@ form ul.inline li {
     width: auto;
 }
 
-.aligned .form-row input {
-    /*width: 20em;*/
-}
-
 .colMS .aligned .vLargeTextField, .colMS .aligned .vXMLLargeTextField {
     width: 350px;
 }
 
 form .aligned p, form .aligned ul {
-    /* margin-left: 7em; */
-/*    padding-left: 5px;
-    padding-right: 15px;*/
+    /*margin-left: 7em;*/
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 form .aligned table p {
@@ -108,7 +94,7 @@ form .aligned table p {
 }
 
 form .aligned p.help {
-    padding-left: 38px; 
+    padding-left: 38px;
 }
 
 .aligned .vCheckboxLabel {
@@ -118,7 +104,7 @@ form .aligned p.help {
 }
 
 .colM .aligned .vLargeTextField, .colM .aligned .vXMLLargeTextField {
-    width: auto;
+    /*width: 610px;*/
 }
 
 .checkbox-row p.help {
@@ -127,17 +113,8 @@ form .aligned p.help {
 }
 
 fieldset .field-box {
+    float: left;
     margin-right: 20px;
-}
-
-.aligned .field-box label {
-    display: inline-block;
-    float: none;
-    word-wrap: break-word;
-}
-
-.aligned .field-box input {
-    width: auto;
 }
 
 /* WIDE FIELDSETS */
@@ -147,11 +124,11 @@ fieldset .field-box {
 }
 
 form .wide p {
-    margin-left: 18em;
+    margin-left: 15em;
 }
 
 form .wide p.help {
-    /* padding-left: 38px; */
+    padding-left: 38px;
 }
 
 .colM fieldset.wide .vLargeTextField, .colM fieldset.wide .vXMLLargeTextField {
