--- a/web/static/rvi/css/dashboard.css
+++ b/web/static/rvi/css/dashboard.css
@@ -57,17 +57,13 @@ h1 {
   display: flex;
   margin-top: 10px;
 }
+
 .navbar-header {
   text-transform: uppercase;
   font-weight: bold;
   font-size: 5rem;
 }
-@media (max-width: 1370px) {
-    .navbar-header {
-      font-size: 3rem;
-      margin-left: 20px;
-    }
-}
+
 .navbar-fixed-top {
   border: 0;
 }
@@ -107,7 +103,7 @@ h1 {
     left: 0;
     z-index: 1000;*/
     display: block;
-    padding: 0 35px 20px 0;
+    padding: 20px 35px 20px 0;
     overflow-x: hidden;
     overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
     /*background-color: #f5f5f5;*/
@@ -165,7 +161,7 @@ h1 {
   }
 }
 .main .page-header {
-  margin-top: 20px;
+  margin-top: 0;
 }
 
 
@@ -407,8 +403,8 @@ p.mini {
     margin-left: -12px;
 }
 .help, p.help {
-    font-size: 10px;
-    /*color: #999;*/
+    font-size: 10px !important;
+    color: #999;
 }
 
 img.help-tooltip {
@@ -556,7 +552,7 @@ thead th a:link, thead th a:visited {
 }
 
 thead th.sorted {
-    /*background: #c5c5c5 url(../img/nav-bg-selected.gif) top left repeat-x;*/
+    background: #c5c5c5 url(../img/nav-bg-selected.gif) top left repeat-x;
 }
 
 thead th.sorted .text {
@@ -575,7 +571,7 @@ table thead th .text a {
 }
 
 table thead th.sortable:hover {
-    /*background: #fff url(../img/nav-bg-reverse.gif) 0 -5px repeat-x;*/
+    background: #fff url(../img/nav-bg-reverse.gif) 0 -5px repeat-x;
 }
 
 thead th.sorted a.sortremove {
@@ -649,8 +645,7 @@ table.orderable-initalized .order-cell, body>tr>td.order-cell {
 
 /* FORM DEFAULTS */
 
-/*input, textarea, select, .form-row p {*/
-input, textarea, select {
+input, textarea, select, .form-row p {
     margin: 2px 0;
     padding: 2px 3px;
     vertical-align: middle;
@@ -814,14 +809,14 @@ ul.messagelist {
 }
 
 ul.messagelist li {
-    font-size: 2rem;
+    font-size: 12px;
     font-weight: bold;
     display: block;
     padding: 5px 5px 4px 25px;
-    margin: 10px 0 3px 0;
+    margin: 0 0 3px 0;
     border-bottom: 1px solid #ddd;
     color: #666;
-    background: #cdffb2 url(../img/icon_success.gif) 5px .3em no-repeat;
+    background: #dfd url(../img/icon_success.gif) 5px .3em no-repeat;
 }
 
 ul.messagelist li.warning {
@@ -833,7 +828,7 @@ ul.messagelist li.error {
 }
 
 .errornote {
-    font-size: 2rem !important;
+    font-size: 12px !important;
     font-weight: bold;
     display: block;
     padding: 5px 5px 4px 25px;
@@ -900,14 +895,10 @@ td ul.errorlist li {
 .errors, .form-row.errors {
     /*background: #ffefef;*/
 }
-.form-row.errors.field-name {
-    /*padding-right: 30px;*/
-}
 
 .form-row.errors {
     border: 1px solid #c22;
     margin: -1px;
-    padding-right: 30px;
 }
 
 .errors input, .errors select, .errors textarea {
@@ -1235,7 +1226,7 @@ table#change-history tbody th {
 }
 
 .page-header {
-    padding: 0 20px 20px 20px;
+    padding: 20px;
     /* border-bottom: 1px solid rgba(255,255,255, 0.25); */
     /* -webkit-flex-grow: 1; */
     /* flex-grow: 1; */
@@ -1303,8 +1294,7 @@ label {
 }
 
 option {
-  /*background-color: rgba(0, 0, 0, .7);*/
-  padding-bottom: 3px;
+  background-color: rgba(0, 0, 0, .7);
 }
 
 .text-muted {
