--- a/web/staticroot/admin/css/base.css
+++ b/web/staticroot/admin/css/base.css
@@ -518,7 +518,7 @@ ul.messagelist li {
     margin: 0 0 3px 0;
     border-bottom: 1px solid #ddd;
     color: #666;
-    background: #cdffb2 url(../img/icon_success.gif) 5px .3em no-repeat;
+    background: #dfd url(../img/icon_success.gif) 5px .3em no-repeat;
 }
 
 ul.messagelist li.warning {
